# lite-forth-avr-pc

./: CMakeLists.txt
include/: common.h  include.h  textmode.h
src/: main.c  textmode.c
